--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   src="https://code.jquery.com/jquery-3.4.1.js"
   integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
   crossorigin="anonymous"></script>
-    <script type="text/javascript" src="app.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
